@@ -32,6 +32,9 @@
     to #xffff0000 bytes. (reported by Benjamin Lambert)
   * bug fix: setting *READ-SUPPRESS* to T no longer renders the default
     REPL unusable. (reported by Daniel Herring)
+  * bug fix: return values of READ-SEQUENCE did not take :START into
+    account on file streams, regressions since 1.0.12.22. (reported by
+    Daniel Herring, patch by Paul Huong)
 
 changes in sbcl-1.0.23 relative to 1.0.22:
   * enhancement: when disassembling method functions, disassembly
